<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/droidify_calculator"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_nilai1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/input_value1"/>

    <EditText
        android:id="@+id/edt_nilai2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/input_value2" />

    <RadioGroup
        android:id="@+id/radioGroupOperasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add" />

        <RadioButton
            android:id="@+id/radioButtonKurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract" />

        <RadioButton
            android:id="@+id/radioButtonKali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple" />

        <RadioButton
            android:id="@+id/radioButtonBagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devide" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOperasi" />


</androidx.appcompat.widget.LinearLayoutCompat>